styling to tabular menu -fix font spacing on safari by defining font weight

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -9,24 +9,21 @@
   font-family: Montserrat-Bold;
   src: local("Montserrat-Bold"),
     url("fonts/Montserrat/static/Montserrat-Bold.ttf") format("truetype");
-  font-family: Montserrat-Bold;
-  src: local("Montserrat-Bold"),
-    url("fonts/Montserrat/static/Montserrat-Bold.ttf") format("truetype");
+  font-weight: 700;
 }
 
 @font-face {
   font-family: Montserrat-Italic;
   src: local("Montserrat-Italic"),
     url("fonts/Montserrat/static/Montserrat-Italic.ttf") format("truetype");
-  font-family: Montserrat-Italic;
-  src: local("Montserrat-Italic"),
-    url("fonts/Montserrat/static/Montserrat-Italic.ttf") format("truetype");
+  font-weight: normal;
 }
 
 @font-face {
   font-family: Montserrat-Regular;
   src: local("Montserrat-Regular"),
     url("fonts/Montserrat/static/Montserrat-Regular.ttf") format("truetype");
+  font-weight: normal;
 }
 
 :root {
@@ -1575,4 +1572,46 @@ table.ui.rcpch.table.cases_table tbody {
   margin-right: auto;
   width: 8em;
   text-align: center;
+}
+
+.progress_label {
+  font-family: Montserrat-Bold;
+}
+
+.ui.tab.segment {
+  background: none #FFFFFF;
+  border-color: var(--rcpch_light_blue);
+  border-width: medium;
+  margin: -1px 0px 0px 0px;
+  border-radius: 0px 0px 0 0 !important;
+}
+
+.ui.tabular.menu .active.item {
+  background: none #FFFFFF;
+  border-top-width: medium;
+  border-left-width: medium;
+  border-right-width: medium;
+  border-color: var(--rcpch_light_blue);
+  font-weight: bold;
+  margin-bottom: -2.5px;
+  box-shadow: none;
+  border-radius: 0px 0px 0px 0px !important;
+}
+
+.ui.tabular.menu .item {
+  background: transparent;
+  border-bottom: none;
+  border-left: medium solid transparent;
+  border-right: medium solid transparent;
+  border-top: medium solid transparent;
+  padding: 0.92857143em 1.42857143em;
+  color: var(--rcpch_light_blue);
+}
+
+.ui.tabular.menu {
+  border-radius: 0em;
+  box-shadow: none !important;
+  border: none;
+  background: none transparent;
+  border-bottom: 2.5px solid var(--rcpch_light_blue);
 }
